# pipeline

./: CMakeLists.txt  Doxyfile  README.org  mypipe.cpp  tests.cpp
examples/: CMakeLists.txt  func1.cpp  func_obj1.cpp  lambda.cpp  maybe.cpp  method1.cpp  templ_meth1.cpp  templ_meth2.cpp
include/pipeline/: args.hpp  pipeline.hpp  ref.hpp
include/pipeline/details/: Arguments.hpp  Bind.hpp  Callable.hpp  GenSeq.hpp  JustReturn.hpp  Namespaces.hpp  PipeOp.hpp  PipeOpFactory.hpp  Ref.hpp  UnpackTuple.hpp
